--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>WordpressApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--  <link rel="stylesheet" href="styles-5INURTSO.css">-->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
+  <!-- <script src="polyfills-FFHMD2TL.js"></script> JS file -->
+  <!-- <script src="main-PA64KG6U.js"></script>-->
 </body>
+
 </html>
